--- a/Firmware/SGC.ioc
+++ b/Firmware/SGC.ioc
@@ -10,20 +10,24 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM5
-Mcu.IPNb=4
+Mcu.IP3=TIM3
+Mcu.IP4=TIM5
+Mcu.IPNb=5
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
-Mcu.Pin4=PB12
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM5_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -45,6 +49,8 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA6.Signal=S_TIM3_CH1
+PA7.Signal=S_TIM3_CH2
 PB12.GPIOParameters=GPIO_PuPd
 PB12.GPIO_PuPd=GPIO_PULLDOWN
 PB12.Locked=true
@@ -121,8 +127,17 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
