--- a/Firmware/SGC.ioc
+++ b/Firmware/SGC.ioc
@@ -104,24 +104,23 @@ Mcu.Pin24=PC8
 Mcu.Pin25=PC9
 Mcu.Pin26=PA8
 Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin34=VP_SYS_VS_tim11
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM2_VS_no_output1
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin33=VP_SYS_VS_tim11
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM2_VS_no_output1
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=38
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -155,10 +154,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ETB1_SENSE2
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PWM_OUT3_PIN
-PA10.Locked=true
-PA10.Signal=S_TIM1_CH3
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -192,11 +187,11 @@ PA7.GPIO_Label=SENSOR_OIL_PIN
 PA7.Locked=true
 PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=PWM_OUT1_PIN
+PA8.GPIO_Label=ETB1_MOTOR1
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=PWM_OUT2_PIN
+PA9.GPIO_Label=ETB1_MOTOR2
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB12.GPIOParameters=GPIO_Label
@@ -244,19 +239,19 @@ PC4.GPIO_Label=VBAT_SENSE_PIN
 PC4.Locked=true
 PC4.Signal=ADCx_IN14
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=ETB1_MOTOR1
+PC6.GPIO_Label=PWM_OUT1
 PC6.Locked=true
 PC6.Signal=S_TIM3_CH1
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=ETB1_MOTOR2
+PC7.GPIO_Label=PWM_OUT2
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=ETB2_MOTOR1
+PC8.GPIO_Label=PWM_OUT3
 PC8.Locked=true
 PC8.Signal=S_TIM3_CH3
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=ETB2_MOTOR2
+PC9.GPIO_Label=PWM_OUT4
 PC9.Locked=true
 PC9.Signal=S_TIM3_CH4
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -356,8 +351,6 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,Output Compare3 CH3
-SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
@@ -366,10 +359,9 @@ SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
-TIM1.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Output Compare1 No Output,OC1Preload,Prescaler
 TIM2.OC1Preload=DISABLE
